--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <section id="about" class="section--footer section--accent" data-section>
       <div class="container about">
         <div class="about__left">
-          <img class="avatar avatar--lg" src="assets/images/sleep.png" alt="馮揚瑜個人照" />
+          <img class="avatar avatar--lg" src="assets/images/21.png" alt="馮揚瑜個人照" />
         </div>
 
         <div class="about__right">
